Faille XSS - Eviter injection HTML

--- a/pages/auth/signin.html
+++ b/pages/auth/signin.html
@@ -5,14 +5,14 @@
 </div>
 
 <div class="container">
-  <form>
+  <form id="signinForm">
       <div class="mb-3">
         <label for="EmailInput" class="form-label">Email</label>
-        <input type="email" class="form-control" id="EmailInput" placeholder="test@mail.fr" name="Email"> 
+        <input type="email" class="form-control" id="EmailInput" placeholder="test@mail.fr" name="email"> 
       </div>
       <div class="mb-3">
         <label for="PasswordInput" class="form-label">Mot de passe</label>
-        <input type="password" class="form-control" id="PasswordInput" name="Password">
+        <input type="password" class="form-control" id="PasswordInput" name="mdp">
         <div class="invalid-feedback">
           Le mail et/ou le mot de passe ne correspondent pas
         </div>
